syntax = "proto3";

package heyrenee.v1;

option go_package = "github.com/HeyReneeInc/proto/golang/heyrenee/v1";

import "heyrenee/v1/messages/caregiver.proto";
import "heyrenee/v1/options/auth.proto";

service CaregiverService {
  rpc CreateCaregiver(CreateCaregiverRequest) returns (heyrenee.v1.messages.Caregiver) {
    option (heyrenee.v1.options.authenticated) = true;
  }
  rpc GetCaregiver(GetCaregiverRequest) returns (heyrenee.v1.messages.Caregiver) {
    option (heyrenee.v1.options.authenticated) = true;
  }
  rpc UpdateCaregiver(UpdateCaregiverRequest) returns (heyrenee.v1.messages.Caregiver) {
    option (heyrenee.v1.options.authenticated) = true;
  }
}

message CreateCaregiverRequest {
  heyrenee.v1.messages.Caregiver caregiver = 1;
}

message GetCaregiverRequest {}

message UpdateCaregiverRequest {
  heyrenee.v1.messages.Caregiver caregiver = 1;
}